Bug 300924 - Dolphin in KDE 4.9 beta cannot use single click to switch places
Summary: Dolphin in KDE 4.9 beta cannot use single click to switch places
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-31 11:33 UTC by Weng Xuetian
Modified: 2012-05-31 12:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2012-05-31 11:33:25 UTC
Double click enabled, before 4.9 beta it can use single click to switch between the places list, but now it follows the double/single click settings.

Reproducible: Always

Steps to Reproduce:
1. Enable double click in system settings
2. Open dolphin
3. Click on places item
Actual Results:  
Need double click to switch

Expected Results:  
Single click to swtich.
Comment 1 Peter Penz 2012-05-31 12:04:18 UTC
Git commit cd77813f1ea9bf9652884bc4791eeb5e76f3f4f0 by Peter Penz.
Committed on 31/05/2012 at 14:03.
Pushed by ppenz into branch 'master'.

Always use single-click for the places panels
FIXED-IN: 4.9.0

M  +1    -0    dolphin/src/panels/places/placespanel.cpp

http://commits.kde.org/kde-baseapps/cd77813f1ea9bf9652884bc4791eeb5e76f3f4f0