Always use single-click for the places panels

BUG: 300924
FIXED-IN: 4.9.0